--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,13 @@ ELSE(LIBEV_FOUND)
 ENDIF(LIBEV_FOUND)
 ###### /LIBEV ##########
 
+# PTHREADS
+FIND_PACKAGE (Threads)
+
+
 INCLUDE_DIRECTORIES (${INC_DIR} ${LIBEV_INCLUDE_DIR})
 
 ADD_SUBDIRECTORY( ${SRC_DIR} )
 
-TARGET_LINK_LIBRARIES(final tserver buffer cgi request ${LIBEV_LIBRARIES})
+TARGET_LINK_LIBRARIES(final tserver buffer cgi request ${LIBEV_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
